# ai-for-data-blog

./: GUIDE.md  README.md  pyproject.toml
semantic-search/: GUIDE.md  example.html  ids-doc.html  ids.html  package.json  pnpm-lock.yaml  search.worker.js  test-index.html  test-reranker.html  vue-app-original.html  vue-app-redesigned.html  vue-app.html
semantic-search/css/: ids.min.css  ids.min.css.map  index.min.css  index.min.css.map  search.min.css  search.min.css.map  universal.min.css  universal.min.css.map
semantic-search/data/: wdi_definitions.json
semantic-search/data/metadata/document/: document_19756057.json  document_6200517.json
semantic-search/js/search/: bundle.js  main.js  rank.worker.js  search.5a18987c.js  search.5a18987c.js.map  search.be681503.js  search.be681503.js.map  search.html  search.js  search.js.map  search.min.js  ss-bundle.js  ss-bundle.js.map  ss-bundle.min.js
semantic-search/scripts/: generate_wdi_embeddings.py
semantic-search/scss/: ids.scss  search-bar.scss  search.scss
